--- a/frontend/src/app/shared/components/stat-card/stat-card.component.html
+++ b/frontend/src/app/shared/components/stat-card/stat-card.component.html
@@ -48,18 +48,20 @@
         </svg>
         } @case ('chart') {
         <svg
-          class="h-6 w-6"
+          xmlns="http://www.w3.org/2000/svg"
           fill="none"
           viewBox="0 0 24 24"
           stroke-width="1.5"
           stroke="currentColor"
+          class="size-6"
         >
           <path
             stroke-linecap="round"
             stroke-linejoin="round"
-            d="M3.75 3v11.25A2.25 2.25 0 006 16.5h12A2.25 2.25 0 0020.25 14.25V3M3.75 14.25v-1.875a3.375 3.375 0 013.375-3.375h1.5a1.125 1.125 0 011.125 1.125v-1.5a3.375 3.375 0 013.375-3.375h1.5A2.25 2.25 0 0119.5 5.25v9.75m-16.5 0a2.25 2.25 0 002.25 2.25h12A2.25 2.25 0 0019.5 14.25m-16.5 0S2.25 16.5 5.25 16.5s3-2.25 3-2.25m4.5-3.375v4.125"
+            d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 0 1 3 19.875v-6.75ZM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V8.625ZM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V4.125Z"
           />
         </svg>
+
         } }
       </div>
     </div>
