--- a/frontend/src/app/features/auth/components/doctor-register-form/doctor-register-form.component.html
+++ b/frontend/src/app/features/auth/components/doctor-register-form/doctor-register-form.component.html
@@ -4,7 +4,12 @@
   class="mt-8 space-y-8"
   novalidate
 >
-  <div *ngIf="apiError" #apiErrorDiv class="rounded-md bg-red-50 p-4" tabindex="-1">
+  <div
+    *ngIf="apiError"
+    #apiErrorDiv
+    class="rounded-md bg-red-50 p-4"
+    tabindex="-1"
+  >
     <p class="text-sm font-medium text-red-800">{{ apiError }}</p>
   </div>
 
@@ -12,15 +17,13 @@
     <h3 class="text-lg font-semibold text-gray-800">Dados Pessoais</h3>
     <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-2">
       <div class="sm:col-span-2">
-        <label
-          for="fullName_medico"
-          class="block text-sm font-medium text-gray-700"
+        <label for="name_medico" class="block text-sm font-medium text-gray-700"
           >Nome Completo*</label
         >
         <input
-          id="fullName_medico"
-          name="fullName_medico"
-          formControlName="fullName"
+          id="name_medico"
+          name="name_medico"
+          formControlName="name"
           type="text"
           required
           class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
@@ -28,15 +31,15 @@
         />
         <div
           *ngIf="
-            doctorForm.get('fullName')?.invalid &&
-            (doctorForm.get('fullName')?.touched || buttonTouched)
+            doctorForm.get('name')?.invalid &&
+            (doctorForm.get('name')?.touched || buttonTouched)
           "
           class="mt-1 text-xs text-red-600"
         >
-          <span *ngIf="doctorForm.get('fullName')?.errors?.['required']"
+          <span *ngIf="doctorForm.get('name')?.errors?.['required']"
             >Campo obrigatório.</span
           >
-          <span *ngIf="doctorForm.get('fullName')?.errors?.['minlength']"
+          <span *ngIf="doctorForm.get('name')?.errors?.['minlength']"
             >O nome deve ter pelo menos 3 caracteres.</span
           >
         </div>
@@ -72,26 +75,26 @@
       </div>
       <div>
         <label
-          for="birthDate_medico"
+          for="birthdate_medico"
           class="block text-sm font-medium text-gray-700"
           >Data de Nascimento*</label
         >
         <input
-          id="birthDate_medico"
-          name="birthDate_medico"
-          formControlName="birthDate"
+          id="birthdate_medico"
+          name="birthdate_medico"
+          formControlName="birthdate"
           type="date"
           required
           class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
         />
         <div
           *ngIf="
-            doctorForm.get('birthDate')?.invalid &&
-            (doctorForm.get('birthDate')?.touched || buttonTouched)
+            doctorForm.get('birthdate')?.invalid &&
+            (doctorForm.get('birthdate')?.touched || buttonTouched)
           "
           class="mt-1 text-xs text-red-600"
         >
-          <span *ngIf="doctorForm.get('birthDate')?.errors?.['required']"
+          <span *ngIf="doctorForm.get('birthdate')?.errors?.['required']"
             >Campo obrigatório.</span
           >
         </div>
@@ -223,18 +226,18 @@
           "
           class="mt-1 text-xs text-red-600"
         >
-        <span *ngIf="doctorForm.get('crm')?.errors?.['required']"
-          >Campo obrigatório.</span
-        >
-      </div>
+          <span *ngIf="doctorForm.get('crm')?.errors?.['required']"
+            >Campo obrigatório.</span
+          >
+        </div>
       </div>
       <div>
-        <label for="specialty" class="block text-sm font-medium text-gray-700"
+        <label for="expertise_area" class="block text-sm font-medium text-gray-700"
           >Especialidade*</label
         >
         <select
-          id="specialty"
-          formControlName="specialty"
+          id="expertise_area"
+          formControlName="expertise_area"
           class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
         >
           <option>Neurologia</option>
@@ -243,15 +246,15 @@
         </select>
         <div
           *ngIf="
-            doctorForm.get('specialty')?.invalid &&
-            (doctorForm.get('specialty')?.touched || buttonTouched)
+            doctorForm.get('expertise_area')?.invalid &&
+            (doctorForm.get('expertise_area')?.touched || buttonTouched)
           "
           class="mt-1 text-xs text-red-600"
         >
-        <span *ngIf="doctorForm.get('specialty')?.errors?.['required']"
-          >Campo obrigatório.</span
-        >
-      </div>
+          <span *ngIf="doctorForm.get('expertise_area')?.errors?.['required']"
+            >Campo obrigatório.</span
+          >
+        </div>
       </div>
     </div>
   </section>
@@ -332,12 +335,12 @@
           "
           class="mt-1 text-xs text-red-600"
         >
-        <span *ngIf="doctorForm.get('email')?.errors?.['required']"
-          >Campo obrigatório.</span
-        >
-        <span *ngIf="doctorForm.get('email')?.errors?.['email']"
-          >Por favor, insira um e-mail válido.</span
-        >
+          <span *ngIf="doctorForm.get('email')?.errors?.['required']"
+            >Campo obrigatório.</span
+          >
+          <span *ngIf="doctorForm.get('email')?.errors?.['email']"
+            >Por favor, insira um e-mail válido.</span
+          >
         </div>
       </div>
       <div>
@@ -356,13 +359,13 @@
           placeholder="Digite sua senha"
         />
         <div class="mt-2 text-xs">
-          <p 
+          <p
             [class.text-green-600]="!doctorForm.get('password')?.errors?.['required'] && !doctorForm.get('password')?.errors?.['minlength']"
             [class.text-gray-400]="doctorForm.get('password')?.errors?.['required'] || doctorForm.get('password')?.errors?.['minlength']"
           >
             &#x2713; Mínimo de 8 caracteres
           </p>
-          <p 
+          <p
             [class.text-green-600]="!doctorForm.get('password')?.errors?.['required'] && !doctorForm.get('password')?.errors?.['strong']"
             [class.text-gray-400]="doctorForm.get('password')?.errors?.['required'] || doctorForm.get('password')?.errors?.['strong']"
           >
@@ -421,7 +424,8 @@
     >
       Já tenho conta
     </a>
-    <button (mouseenter)="buttonTouched = true"
+    <button
+      (mouseenter)="buttonTouched = true"
       type="submit"
       [disabled]="doctorForm.invalid || isLoading"
       class="rounded-md border border-transparent bg-violet-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-violet-800 focus:outline-none focus:ring-2 focus:ring-violet-500 focus:ring-offset-2"
