--- a/frontend/src/app/features/auth/components/patient-register-form/patient-register-form.component.html
+++ b/frontend/src/app/features/auth/components/patient-register-form/patient-register-form.component.html
@@ -12,13 +12,13 @@
     <h3 class="text-lg font-semibold text-gray-800">Dados Pessoais</h3>
     <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-2">
       <div class="sm:col-span-2">
-        <label for="fullName" class="block text-sm font-medium text-gray-700"
+        <label for="name" class="block text-sm font-medium text-gray-700"
           >Nome Completo*</label
         >
         <input
-          id="fullName"
-          name="fullName"
-          formControlName="fullName"
+          id="name"
+          name="name"
+          formControlName="name"
           type="text"
           required
           class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
@@ -26,15 +26,15 @@
         />
         <div
           *ngIf="
-            patientForm.get('fullName')?.invalid &&
-            (patientForm.get('fullName')?.touched || buttonTouched)
+            patientForm.get('name')?.invalid &&
+            (patientForm.get('name')?.touched || buttonTouched)
           "
           class="mt-1 text-xs text-red-600"
         >
-          <span *ngIf="patientForm.get('fullName')?.errors?.['required']"
+          <span *ngIf="patientForm.get('name')?.errors?.['required']"
             >Campo obrigatório.</span
           >
-          <span *ngIf="patientForm.get('fullName')?.errors?.['minlength']"
+          <span *ngIf="patientForm.get('name')?.errors?.['minlength']"
             >O nome deve ter pelo menos 3 caracteres.</span
           >
         </div>
@@ -69,25 +69,25 @@
         </div>
       </div>
       <div>
-        <label for="birthDate" class="block text-sm font-medium text-gray-700"
+        <label for="birthdate" class="block text-sm font-medium text-gray-700"
           >Data de Nascimento*</label
         >
         <input
-          id="birthDate"
-          name="birthDate"
-          formControlName="birthDate"
+          id="birthdate"
+          name="birthdate"
+          formControlName="birthdate"
           type="date"
           required
           class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
         />
         <div
           *ngIf="
-            patientForm.get('birthDate')?.invalid &&
-            (patientForm.get('birthDate')?.touched || buttonTouched)
+            patientForm.get('birthdate')?.invalid &&
+            (patientForm.get('birthdate')?.touched || buttonTouched)
           "
           class="mt-1 text-xs text-red-600"
         >
-          <span *ngIf="patientForm.get('birthDate')?.errors?.['required']"
+          <span *ngIf="patientForm.get('birthdate')?.errors?.['required']"
             >Campo obrigatório.</span
           >
         </div>
