--- a/frontend/src/app/features/dashboard/components/voice-test/voice-test.html
+++ b/frontend/src/app/features/dashboard/components/voice-test/voice-test.html
@@ -75,10 +75,17 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <div class="flex justify-center gap-4 md:justify-center">
+        <div
+          class="flex h-24 w-full items-center justify-center rounded-lg bg-gray-100"
+        >
+          <canvas #audioVisualizer class="h-full w-full"></canvas>
+        </div>
+
+        <div class="flex flex-wrap justify-center gap-4">
           @if (!isRecording()) {
           <button
             (click)="startRecording()"
+            [disabled]="!!analysisResults()"
             class="inline-flex items-center rounded-md bg-violet-600 px-5 py-2 text-base font-semibold text-white shadow-sm hover:bg-violet-700 focus:outline-none focus:ring-2 focus:ring-violet-500 focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
           >
             Iniciar Gravação
@@ -90,13 +97,19 @@
           >
             Finalizar Gravação
           </button>
-          } @if (recordedAudioUrl()) {
-          <audio #audioPlayer [src]="recordedAudioUrl()"></audio>
+          } @if (recordedAudioUrl() && !analysisResults()) {
+          <audio #audioPlayer [src]="recordedAudioUrl()" class="hidden"></audio>
           <button
             (click)="playRecording()"
             class="inline-flex items-center rounded-md border border-gray-300 bg-white px-5 py-2 text-base font-semibold text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
           >
             Ouvir Gravação
+          </button>
+          <button
+            (click)="uploadAudio()"
+            class="inline-flex items-center rounded-md bg-green-600 px-5 py-2 text-base font-semibold text-white shadow-sm hover:bg-green-700"
+          >
+            Enviar para Análise
           </button>
           }
         </div>
@@ -112,11 +125,11 @@
   } @if (analysisResults()) {
   <div class="mt-6 rounded-lg bg-white p-6 shadow-md">
     <h3 class="text-lg font-semibold text-gray-800">Resultado da Análise</h3>
-    <!-- <p>
+    <p>
       <strong>Pontuação (Score):</strong>
       {{ analysisResults()?.score | number : "1.2-2" }}
     </p>
-    <p><strong>Análise:</strong> {{ analysisResults()?.analysis }}</p> -->
+    <p><strong>Análise:</strong> {{ analysisResults()?.analysis }}</p>
     <div class="mt-6 flex justify-end">
       <button
         (click)="goBackToMethodSelection()"
