feat: forgot password integrated with frontend

--- a/frontend/src/app/features/auth/components/login/login.component.html
+++ b/frontend/src/app/features/auth/components/login/login.component.html
@@ -138,7 +138,7 @@
           </div>
           <div class="text-sm">
             <a
-              routerLink="/auth/password-recovery"
+              routerLink="/auth/forgot-password"
               class="font-medium text-violet-600 hover:text-violet-500"
               >Esqueceu sua senha?</a
             >
