feat: reset password flow completed

--- a/frontend/src/app/features/auth/components/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/features/auth/components/forgot-password/forgot-password.component.html
@@ -13,13 +13,11 @@
         <h1 class="text-3xl font-bold text-gray-800">ParkinsonCheck</h1>
       </a>
       <h2 class="mt-4 text-xl text-gray-600">
-        Acesse sua conta para continuar
+        Esqueceu sua senha? insira seu email para a recuperação
       </h2>
     </div>
 
-    <div class="mt-8 flex border-b border-gray-200">
-      
-    </div>
+    <div class="mt-8 flex border-b border-gray-200"></div>
 
     <div class="mt-8">
       <form
@@ -53,7 +51,8 @@
               "
               class="mt-1 text-xs text-red-600"
             >
-              <span *ngIf="forgotPasswordForm.get('email')?.errors?.['required']"
+              <span
+                *ngIf="forgotPasswordForm.get('email')?.errors?.['required']"
                 >Campo obrigatório.</span
               >
               <span *ngIf="forgotPasswordForm.get('email')?.errors?.['email']"
@@ -62,7 +61,6 @@
             </div>
           </div>
         </div>
- 
 
         <div (mouseenter)="buttonTouched = true">
           <button
@@ -99,10 +97,20 @@
   </div>
 
   <div class="mt-6 text-center text-sm text-gray-600">
+    <p>
+      <a
+        routerLink="/auth/login"
+        class="font-medium text-violet-600 hover:text-violet-500"
+      >
+        Voltar para o login
+      </a>
+    </p>
+
     <div class="relative my-4">
       <div class="absolute inset-0 flex items-center">
         <div class="w-full border-t border-gray-300"></div>
       </div>
+
       <div class="relative flex justify-center text-sm">
         <span class="bg-gray-100 px-2 text-gray-500">ou</span>
       </div>
