--- a/frontend/src/app/features/auth/components/reset-password/reset-password.component.html
+++ b/frontend/src/app/features/auth/components/reset-password/reset-password.component.html
@@ -1,1 +1,172 @@
-<p>reset-password works!</p>
+<div class="w-full max-w-xl mx-auto">
+  <div class="rounded-lg bg-white p-6 shadow-sm md:p-8">
+    <div class="text-center">
+      <a
+        routerLink="/"
+        class="inline-flex items-center justify-center space-x-3"
+      >
+        <div
+          class="flex h-12 w-12 items-center justify-center rounded-lg bg-violet-700"
+        >
+          <span class="text-2xl font-bold text-white">P</span>
+        </div>
+        <h1 class="text-3xl font-bold text-gray-800">ParkinsonCheck</h1>
+      </a>
+      <h2 class="mt-4 text-xl text-gray-600">
+        Insira e confirme sua nova senha
+      </h2>
+    </div>
+
+    <div class="mt-8 flex border-b border-gray-200"></div>
+
+    <div class="mt-8">
+      <form
+        #loginFormElement="ngForm"
+        [formGroup]="resetPasswordForm"
+        (ngSubmit)="onSubmit()"
+        class="space-y-6"
+        novalidate
+      >
+        <div *ngIf="apiError" class="rounded-md bg-red-50 p-4">
+          <p class="text-sm font-medium text-red-800"></p>
+        </div>
+
+        <div>
+          <label for="password" class="block text-sm font-medium text-gray-700"
+            >Nova Senha*</label
+          >
+          <div class="mt-1">
+            <input
+              id="password"
+              type="password"
+              formControlName="password"
+              required
+              [placeholder]="'Insira sua nova senha'"
+              class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
+            />
+            <div class="mt-2 text-xs">
+              <p
+                [class.text-green-600]="!resetPasswordForm.get('password')?.errors?.['required'] && !resetPasswordForm.get('password')?.errors?.['minlength']"
+                [class.text-gray-400]="resetPasswordForm.get('password')?.errors?.['required'] || resetPasswordForm.get('password')?.errors?.['minlength']"
+              >
+                &#x2713; Mínimo de 8 caracteres
+              </p>
+              <p
+                [class.text-green-600]="!resetPasswordForm.get('password')?.errors?.['required'] && !resetPasswordForm.get('password')?.errors?.['strong']"
+                [class.text-gray-400]="resetPasswordForm.get('password')?.errors?.['required'] || resetPasswordForm.get('password')?.errors?.['strong']"
+              >
+                &#x2713; Letras maiúsculas, minúsculas e números
+              </p>
+            </div>
+
+            <div
+              *ngIf="
+                resetPasswordForm.get('password')?.invalid &&
+                (resetPasswordForm.get('password')?.touched || buttonTouched)
+              "
+              class="mt-1 text-xs text-red-600"
+            >
+              <span
+                *ngIf="resetPasswordForm.get('password')?.errors?.['required']"
+                >Campo obrigatório.</span
+              >
+            </div>
+          </div>
+          <div class="mt-4">
+              <label
+                for="confirmPassword"
+                class="block text-sm font-medium text-gray-700"
+                >Confirme sua Senha*</label
+              >
+              <input
+                type="password"
+                id="confirmPassword"
+                formControlName="confirmPassword"
+                class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-violet-500 focus:outline-none focus:ring-violet-500 sm:text-sm"
+                placeholder="Digite sua senha novamente"
+              />
+              <div
+                *ngIf="
+                  resetPasswordForm.get('confirmPassword')?.invalid &&
+                  (resetPasswordForm.get('confirmPassword')?.touched ||
+                    buttonTouched)
+                "
+                class="mt-1 text-xs text-red-600"
+              >
+                <span
+                  *ngIf="resetPasswordForm.get('confirmPassword')?.errors?.['required']"
+                  >Campo obrigatório.</span
+                >
+                <span
+                  *ngIf="resetPasswordForm.get('confirmPassword')?.errors?.['mismatch']"
+                  >As senhas não coincidem.</span
+                >
+              </div>
+          </div>
+
+        </div>
+
+        <div (mouseenter)="buttonTouched = true">
+          <button
+            type="submit"
+            [disabled]="resetPasswordForm.invalid || isLoading"
+            class="flex w-full justify-center rounded-md border border-transparent bg-violet-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-violet-800 focus:outline-none focus:ring-2 focus:ring-violet-500 focus:ring-offset-2"
+          >
+            <svg
+              *ngIf="isLoading"
+              class="animate-spin -ml-1 mr-3 h-5 w-5 text-white"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+            >
+              <circle
+                class="opacity-25"
+                cx="12"
+                cy="12"
+                r="10"
+                stroke="currentColor"
+                stroke-width="4"
+              ></circle>
+              <path
+                class="opacity-75"
+                fill="currentColor"
+                d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+              ></path>
+            </svg>
+            <span *ngIf="!isLoading">Salvar</span>
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div class="mt-6 text-center text-sm text-gray-600">
+    <p>
+      <a
+        routerLink="/auth/login"
+        class="font-medium text-violet-600 hover:text-violet-500"
+      >
+        Voltar para o login
+      </a>
+    </p>
+
+    <div class="relative my-4">
+      <div class="absolute inset-0 flex items-center">
+        <div class="w-full border-t border-gray-300"></div>
+      </div>
+
+      <div class="relative flex justify-center text-sm">
+        <span class="bg-gray-100 px-2 text-gray-500">ou</span>
+      </div>
+    </div>
+    <p>
+      Ainda não possui uma conta?
+      <a
+        routerLink="/auth/register"
+        class="font-medium text-violet-600 hover:text-violet-500"
+      >
+        Cadastre-se agora
+      </a>
+    </p>
+  </div>
+</div>
